--- a/l10n_it_fiscal_document_type/views/fiscal_document_type_view.xml
+++ b/l10n_it_fiscal_document_type/views/fiscal_document_type_view.xml
@@ -37,8 +37,7 @@
         <field name="name">Fiscal Document Types</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">fiscal.document.type</field>
-        <field name="view_type">form</field>
-        <field name="view_mode">tree,form</field>
+        <field name="binding_view_types">list,form</field>
         <field name="view_id" ref="view_fiscal_document_type_tree" />
     </record>
 
