--- a/l10n_it_fatturapa/views/account_move_view.xml
+++ b/l10n_it_fatturapa/views/account_move_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-    <record id="invoice_form" model="ir.ui.view">
-        <field name="name">view.invoice.fatturapa.form</field>
-        <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="account.invoice_form" />
+    <record id="view_move_form" model="ir.ui.view">
+        <field name="name">view.account.move.fatturapa.form</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_move_form" />
         <field name="arch" type="xml">
             <field name="journal_id" position="attributes">
                 <attribute name="groups" />
