--- a/l10n_it_fatturapa/views/account_view.xml
+++ b/l10n_it_fatturapa/views/account_view.xml
@@ -14,8 +14,8 @@
 
         <record id="view_invoice_line_form_fatturapa" model="ir.ui.view">
             <field name="name">account.invoice.line.fatturapa</field>
-            <field name="model">account.invoice.line</field>
-            <field name="inherit_id" ref="account.view_invoice_line_form" />
+            <field name="model">account.move.line</field>
+            <field name="inherit_id" ref="account.view_move_line_form" />
             <field name="arch" type="xml">
                 <field name="name" position="after">
                     <separator string="Electronic Invoice" />
