--- a/l10n_it_fatturapa/views/partner_view.xml
+++ b/l10n_it_fatturapa/views/partner_view.xml
@@ -13,14 +13,8 @@
                     groups="account.group_account_invoice"
                 >
                 <group name="fatturapa_group">
-                    <label
-                            for="electronic_invoice_no_contact_update"
-                            attrs="{'invisible': [('supplier', '=', False)]}"
-                        />
-                    <field
-                            name="electronic_invoice_no_contact_update"
-                            attrs="{'invisible': [('supplier', '=', False)]}"
-                        />
+                    <label for="electronic_invoice_no_contact_update" />
+                    <field name="electronic_invoice_no_contact_update" />
                     <group>
                         <field name="electronic_invoice_subjected" />
                         <field
@@ -67,6 +61,8 @@
         <field name="inherit_id" ref="base.view_partner_form" />
         <field name="arch" type="xml">
             <xpath expr="//div[@name='div_address']/../../.." position="after">
+                <field name="electronic_invoice_obliged_subject" invisible="True" />
+                <field name="electronic_invoice_subjected" invisible="True" />
                 <group
                     string="E-invoicing"
                     name="e_invoice_info"
