[MIG] l10n_it_fatturapa: rimozione riferimenti a res_partner.customer e res_partner.supplier
NOTA: commit separato - da fare review esplicita sull'impatto della change

--- a/l10n_it_fatturapa/views/partner_view.xml
+++ b/l10n_it_fatturapa/views/partner_view.xml
@@ -13,14 +13,8 @@
                     groups="account.group_account_invoice"
                 >
                 <group name="fatturapa_group">
-                    <label
-                            for="electronic_invoice_no_contact_update"
-                            attrs="{'invisible': [('supplier', '=', False)]}"
-                        />
-                    <field
-                            name="electronic_invoice_no_contact_update"
-                            attrs="{'invisible': [('supplier', '=', False)]}"
-                        />
+                    <label for="electronic_invoice_no_contact_update" />
+                    <field name="electronic_invoice_no_contact_update" />
                     <group>
                         <field name="electronic_invoice_subjected" />
                         <field
