--- a/l10n_it_fatturapa_in/views/account_view.xml
+++ b/l10n_it_fatturapa_in/views/account_view.xml
@@ -24,7 +24,7 @@
                             <field name='id' invisible="1" />
                             <label for="datas" />
                             <div>
-                                <field name="datas" filename="datas_fname" />
+                                <field name="datas" filename="name" />
                                 <field
                                     name="ftpa_preview_link"
                                     widget="url"
@@ -32,7 +32,6 @@
                                     attrs="{'invisible': [('id', '=', False)]}"
                                 />
                             </div>
-                            <field name="datas_fname" invisible="1" />
                             <field name="name" invisible="1" />
                         </group>
                         <group>
@@ -52,9 +51,9 @@
                             >
                                 <tree>
                                     <field name="partner_id" />
-                                    <field name="date_invoice" />
-                                    <field name="reference" />
-                                    <field name="origin" />
+                                    <field name="invoice_date" />
+                                    <field name="payment_reference" />
+                                    <field name="invoice_origin" />
                                     <field name="amount_total" />
                                     <field name="state" />
                                     <button
@@ -130,7 +129,6 @@
     <record id="action_fattura_pa_in" model="ir.actions.act_window">
         <field name="name">Incoming E-bill Files</field>
         <field name="res_model">fatturapa.attachment.in</field>
-        <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
         <field name="context">{'search_default_to_register': True}</field>
         <field name="view_id" ref="view_fatturapa_in_attachment_tree" />
@@ -143,7 +141,7 @@
     <!-- Extend purchase invoice line -->
     <record id="view_invoice_line_form_fatturapa_in" model="ir.ui.view">
         <field name="name">account.invoice.line.fatturapa.in</field>
-        <field name="model">account.invoice.line</field>
+        <field name="model">account.move.line</field>
         <field
             name="inherit_id"
             ref="l10n_it_fatturapa.view_invoice_line_form_fatturapa"
@@ -154,11 +152,12 @@
             </field>
         </field>
     </record>
+
     <!-- Extend purchase invoice  -->
     <record id="view_invoice_form_fatturapa_in" model="ir.ui.view">
         <field name="name">account.invoice.fatturapa_in</field>
-        <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="account.invoice_supplier_form" />
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_move_form" />
         <field name="arch" type="xml">
             <xpath expr="//div[@role='alert']" position="after">
                 <div
@@ -187,7 +186,7 @@
                     attrs="{'invisible': [('fatturapa_attachment_in_id', '=', False)]}"
                 />
             </field>
-            <field name="date_invoice" position="before">
+            <field name="invoice_date" position="before">
                 <field
                     name="sender"
                     readonly="1"
@@ -444,14 +443,15 @@
                     </group>
                 </page>
             </xpath>
-            <field name="move_id" position="after">
+            <xpath expr="//group[@name='accounting_info_group']">
                 <field
                     name="fatturapa_attachment_in_id"
                     attrs="{'readonly': [('state', 'not in', ('draft'))]}"
                 />
-            </field>
+            </xpath>
         </field>
     </record>
+
     <record id="fatturapa_article_code_tree" model="ir.ui.view">
         <field name="name">fatturapa.article.code.tree</field>
         <field name="model">fatturapa.article.code</field>
