--- a/l10n_it_fatturapa_in/views/account_view.xml
+++ b/l10n_it_fatturapa_in/views/account_view.xml
@@ -140,16 +140,16 @@
     />
     <!-- Extend purchase invoice line -->
     <record id="view_invoice_line_form_fatturapa_in" model="ir.ui.view">
-        <field name="name">account.invoice.line.fatturapa.in</field>
-        <field name="model">account.move.line</field>
-        <field
-            name="inherit_id"
-            ref="l10n_it_fatturapa.view_invoice_line_form_fatturapa"
-        />
+        <field name="name">account.move.fatturapa.in</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_move_form" />
         <field name="arch" type="xml">
-            <field name="product_id" position="after">
+            <xpath
+                expr="//field[@name='invoice_line_ids']/form/sheet/group/field[@name='product_id']"
+                position="after"
+            >
                 <field name="fatturapa_attachment_in_id" invisible="1" />
-            </field>
+            </xpath>
         </field>
     </record>
 
