--- a/l10n_it_fatturapa_in/views/account_view.xml
+++ b/l10n_it_fatturapa_in/views/account_view.xml
@@ -244,7 +244,7 @@
                             <field name="e_invoice_amount_total" />
                         </group>
                     </group>
-                    <group string="Lines Detail">
+                    <label style="font-size: 1.625rem; font-weight: normal; color:#666666;" for="e_invoice_line_ids" string="Lines Detail"/>
                         <field name="e_invoice_line_ids" nolabel="1">
                             <tree string="Lines Detail">
                                 <field name="line_number" />
@@ -298,8 +298,7 @@
                                 </group>
                             </form>
                         </field>
-                    </group>
-                    <group string="Summary Data">
+                        <label style="font-size: 1.625rem; font-weight: normal; color:#666666;" for="fatturapa_summary_ids" string="Summary Data"/>
                         <field name="fatturapa_summary_ids" nolabel="1" readonly="1">
                             <tree editable="bottom" string="Summary Data">
                                 <field name="tax_rate" />
@@ -312,7 +311,6 @@
                                 <field name="law_reference" />
                             </tree>
                         </field>
-                    </group>
                     <group string="Delivery">
                         <group>
                             <field name="delivery_address" readonly="1" />
@@ -331,7 +329,7 @@
                             <field name="ftpa_incoterms" readonly="1" />
                         </group>
                     </group>
-                    <group string="Attachments">
+                        <label style="font-size: 1.625rem; font-weight: normal; color:#666666;" for="fatturapa_doc_attachments" string="Attachments"/>
                         <field
                             name="fatturapa_doc_attachments"
                             nolabel="1"
@@ -355,8 +353,7 @@
                                 </group>
                             </form>
                         </field>
-                    </group>
-                    <group string="Related Documents">
+                        <label style="font-size: 1.625rem; font-weight: normal; color:#666666;" for="related_documents" string="Related Documents"/>
                         <field name="related_documents" nolabel="1" readonly="1">
                             <tree editable="bottom" string="Related Documents">
                                 <field name="type" />
@@ -369,8 +366,7 @@
                                 <field name="cup" />
                             </tree>
                         </field>
-                    </group>
-                    <group string="Welfare Fund">
+                    <label style="font-size: 1.625rem; font-weight: normal; color:#666666;" for="welfare_fund_ids" string="Welfare Fund"/>
                         <field name="welfare_fund_ids" nolabel="1" readonly="1">
                             <tree editable="bottom" string="Welfare Fund Details">
                                 <field name="name" />
@@ -383,16 +379,14 @@
                                 <field name="pa_line_code" />
                             </tree>
                         </field>
-                    </group>
-                    <group string="Withholding">
+                    <label style="font-size: 1.625rem; font-weight: normal; color:#666666;" for="ftpa_withholding_ids" string="Withholding"/>
                         <field name="ftpa_withholding_ids" nolabel="1" readonly="1">
                             <tree editable="bottom" string="Withholding Details">
                                 <field name="name" />
                                 <field name="amount" />
                             </tree>
                         </field>
-                    </group>
-                    <group string="Payments">
+                    <label style="font-size: 1.625rem; font-weight: normal; color:#666666;" for="fatturapa_payments" string="Payments"/>
                         <field name="fatturapa_payments" nolabel="1" readonly="1">
                             <tree string="Payments">
                                 <field name="payment_terms" />
@@ -412,8 +406,7 @@
                                 </sheet>
                             </form>
                         </field>
-                    </group>
-                    <group string="Progress data">
+                    <label style="font-size: 1.625rem; font-weight: normal; color:#666666;" for="activity_progress_ids" string="Progress data"/>
                         <field
                             name="activity_progress_ids"
                             nolabel="1"
@@ -424,7 +417,6 @@
                                 <field name="fatturapa_activity_progress" />
                             </tree>
                         </field>
-                   </group>
                     <group>
                         <group string="Stable Organization">
                             <field name="efatt_stabile_organizzazione_indirizzo" />
