--- a/l10n_it_fatturapa_in/views/account_view.xml
+++ b/l10n_it_fatturapa_in/views/account_view.xml
@@ -244,7 +244,11 @@
                             <field name="e_invoice_amount_total" />
                         </group>
                     </group>
-                    <group string="Lines Detail">
+                    <label
+                        style="font-size: 1.625rem; font-weight: normal; color:#666666;"
+                        for="e_invoice_line_ids"
+                        string="Lines Detail"
+                    />
                         <field name="e_invoice_line_ids" nolabel="1">
                             <tree string="Lines Detail">
                                 <field name="line_number" />
@@ -276,30 +280,33 @@
                                     </group>
                                     <separator string="Articles Code" />
                                     <field
-                                        name="cod_article_ids"
-                                        nolabel="1"
-                                        colspan="4"
-                                    >
+                                    name="cod_article_ids"
+                                    nolabel="1"
+                                    colspan="4"
+                                >
                                     </field>
                                     <separator string="Discount Supplement" />
                                     <field
-                                        name="discount_rise_price_ids"
-                                        nolabel="1"
-                                        colspan="4"
-                                    >
+                                    name="discount_rise_price_ids"
+                                    nolabel="1"
+                                    colspan="4"
+                                >
                                     </field>
                                     <separator string="Other Administrative Data" />
                                     <field
-                                        name="other_data_ids"
-                                        nolabel="1"
-                                        colspan="4"
-                                    >
+                                    name="other_data_ids"
+                                    nolabel="1"
+                                    colspan="4"
+                                >
                                     </field>
                                 </group>
                             </form>
                         </field>
-                    </group>
-                    <group string="Summary Data">
+                        <label
+                        style="font-size: 1.625rem; font-weight: normal; color:#666666;"
+                        for="fatturapa_summary_ids"
+                        string="Summary Data"
+                    />
                         <field name="fatturapa_summary_ids" nolabel="1" readonly="1">
                             <tree editable="bottom" string="Summary Data">
                                 <field name="tax_rate" />
@@ -312,7 +319,6 @@
                                 <field name="law_reference" />
                             </tree>
                         </field>
-                    </group>
                     <group string="Delivery">
                         <group>
                             <field name="delivery_address" readonly="1" />
@@ -331,12 +337,16 @@
                             <field name="ftpa_incoterms" readonly="1" />
                         </group>
                     </group>
-                    <group string="Attachments">
+                        <label
+                        style="font-size: 1.625rem; font-weight: normal; color:#666666;"
+                        for="fatturapa_doc_attachments"
+                        string="Attachments"
+                    />
                         <field
-                            name="fatturapa_doc_attachments"
-                            nolabel="1"
-                            readonly="1"
-                        >
+                        name="fatturapa_doc_attachments"
+                        nolabel="1"
+                        readonly="1"
+                    >
                             <tree string="Attachments">
                                 <field name="ir_attachment_id" />
                                 <field name="name" />
@@ -355,8 +365,11 @@
                                 </group>
                             </form>
                         </field>
-                    </group>
-                    <group string="Related Documents">
+                        <label
+                        style="font-size: 1.625rem; font-weight: normal; color:#666666;"
+                        for="related_documents"
+                        string="Related Documents"
+                    />
                         <field name="related_documents" nolabel="1" readonly="1">
                             <tree editable="bottom" string="Related Documents">
                                 <field name="type" />
@@ -369,8 +382,11 @@
                                 <field name="cup" />
                             </tree>
                         </field>
-                    </group>
-                    <group string="Welfare Fund">
+                    <label
+                        style="font-size: 1.625rem; font-weight: normal; color:#666666;"
+                        for="welfare_fund_ids"
+                        string="Welfare Fund"
+                    />
                         <field name="welfare_fund_ids" nolabel="1" readonly="1">
                             <tree editable="bottom" string="Welfare Fund Details">
                                 <field name="name" />
@@ -383,16 +399,22 @@
                                 <field name="pa_line_code" />
                             </tree>
                         </field>
-                    </group>
-                    <group string="Withholding">
+                    <label
+                        style="font-size: 1.625rem; font-weight: normal; color:#666666;"
+                        for="ftpa_withholding_ids"
+                        string="Withholding"
+                    />
                         <field name="ftpa_withholding_ids" nolabel="1" readonly="1">
                             <tree editable="bottom" string="Withholding Details">
                                 <field name="name" />
                                 <field name="amount" />
                             </tree>
                         </field>
-                    </group>
-                    <group string="Payments">
+                    <label
+                        style="font-size: 1.625rem; font-weight: normal; color:#666666;"
+                        for="fatturapa_payments"
+                        string="Payments"
+                    />
                         <field name="fatturapa_payments" nolabel="1" readonly="1">
                             <tree string="Payments">
                                 <field name="payment_terms" />
@@ -404,27 +426,29 @@
                                     </group>
                                     <group string="Payments Details">
                                         <field
-                                            name="payment_methods"
-                                            nolabel="1"
-                                            readonly="1"
-                                        />
+                                        name="payment_methods"
+                                        nolabel="1"
+                                        readonly="1"
+                                    />
                                     </group>
                                 </sheet>
                             </form>
                         </field>
-                    </group>
-                    <group string="Progress data">
+                    <label
+                        style="font-size: 1.625rem; font-weight: normal; color:#666666;"
+                        for="activity_progress_ids"
+                        string="Progress data"
+                    />
                         <field
-                            name="activity_progress_ids"
-                            nolabel="1"
-                            readonly="1"
-                            colspan="2"
-                        >
+                        name="activity_progress_ids"
+                        nolabel="1"
+                        readonly="1"
+                        colspan="2"
+                    >
                             <tree>
                                 <field name="fatturapa_activity_progress" />
                             </tree>
                         </field>
-                   </group>
                     <group>
                         <group string="Stable Organization">
                             <field name="efatt_stabile_organizzazione_indirizzo" />
