--- a/l10n_it_fatturapa/views/partner_view.xml
+++ b/l10n_it_fatturapa/views/partner_view.xml
@@ -61,6 +61,8 @@
         <field name="inherit_id" ref="base.view_partner_form" />
         <field name="arch" type="xml">
             <xpath expr="//div[@name='div_address']/../../.." position="after">
+                <field name="electronic_invoice_obliged_subject" invisible="True" />
+                <field name="electronic_invoice_subjected" invisible="True" />
                 <group
                     string="E-invoicing"
                     name="e_invoice_info"
