--- a/l10n_it_reverse_charge/views/account_move_views.xml
+++ b/l10n_it_reverse_charge/views/account_move_views.xml
@@ -6,19 +6,21 @@
 <odoo>
     <record id="view_invoice_supplier_form_rc" model="ir.ui.view">
         <field name="name">account.invoice.supplier.form.rc</field>
-        <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="account.invoice_supplier_form" />
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_move_form" />
         <field name="arch" type="xml">
             <field name="move_id" position="after">
                 <field
                     name="rc_self_invoice_id"
                     readonly="True"
-                    context="{'form_view_ref': 'account.invoice_form'}"
                 />
                 <field
                     name="rc_self_purchase_invoice_id"
                     readonly="True"
-                    context="{'form_view_ref': 'account.supplier_invoice_form'}"
+                />
+                <field
+                    name="rc_purchase_invoice_id"
+                    readonly="True"
                 />
             </field>
             <field name="price_subtotal" position="after">
@@ -29,8 +31,8 @@
 
     <record id="view_invoice_line_form_rc" model="ir.ui.view">
         <field name="name">view_invoice_line_form_rc</field>
-        <field name="model">account.invoice.line</field>
-        <field name="inherit_id" ref="account.view_invoice_line_form" />
+        <field name="model">account.move.line</field>
+        <field name="inherit_id" ref="account.view_move_line_form" />
         <field name="arch" type="xml">
             <xpath
                 expr="//form/group/group/field[@name='currency_id']"
@@ -38,21 +40,6 @@
             >
                 <field name="rc" />
             </xpath>
-        </field>
-    </record>
-
-    <record id="view_invoice_form_rc" model="ir.ui.view">
-        <field name="name">account.invoice.form.rc</field>
-        <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="account.invoice_form" />
-        <field name="arch" type="xml">
-            <field name="move_id" position="after">
-                <field
-                    name="rc_purchase_invoice_id"
-                    readonly="True"
-                    context="{'form_view_ref': 'account.supplier_invoice_form'}"
-                />
-            </field>
         </field>
     </record>
 </odoo>
