[MIG] account_vat_period_end_statement: Migration to 14.0

--- a/account_vat_period_end_statement/views/account_view.xml
+++ b/account_vat_period_end_statement/views/account_view.xml
@@ -52,8 +52,8 @@
                     />
                     <field
                         name="authority_partner_id"
-                        domain="[('supplier', '=', True)]"
-                        contenxt="{'default_supplier': True}"
+                        domain="[('supplier_rank','>', 0)]"
+                        context="{'default_supplier': True}"
                         attrs="{'invisible': [('annual', '=', True)]}"
                     />
                     <field
