--- a/l10n_it_fatturapa/views/account_view.xml
+++ b/l10n_it_fatturapa/views/account_view.xml
@@ -17,8 +17,12 @@
             <field name="model">account.move</field>
             <field name="inherit_id" ref="account.view_move_form" />
             <field name="arch" type="xml">
+                <field name="journal_id" position="attributes">
+                    <attribute name="groups" />
+                </field>
+
                 <xpath
-                    expr="//field[@name='invoice_line_ids']/form"
+                    expr="//field[@name='invoice_line_ids']/tree"
                     position="attributes"
                 >
                     <attribute name="editable" />
