--- a/l10n_it_withholding_tax/views/account.xml
+++ b/l10n_it_withholding_tax/views/account.xml
@@ -18,7 +18,7 @@
                 >
                     <attribute
                         name="context"
-                    >{'fiscal_position_id': fiscal_position_id, 'move_type': move_type, 'journal_id': journal_id, 'default_invoice_id': id}</attribute>
+                    >{'fiscal_position_id': fiscal_position_id, 'default_move_type': context.get('default_move_type'), 'journal_id': journal_id, 'default_partner_id': commercial_partner_id, 'default_currency_id': currency_id or company_currency_id}</attribute>
                 </xpath>
 
                 <xpath
@@ -32,12 +32,22 @@
                     />
                 </xpath>
 
-<!--
-                <xpath expr="//page//tree//field[@name='tax_ids']" position="after">
-                    <field
-                    name="withholding_tax_line_ids"
-                    attrs="{'invisible': [('withholding_tax', '=', False)]}"
+                <xpath
+                    expr="//field[@name='invoice_line_ids']/form//field[@name='tax_ids']"
+                    position="after"
                 >
+                    <field
+                        name="invoice_line_tax_wt_ids"
+                        widget="many2many_tags"
+                        options="{'no_create': True}"
+                    />
+                </xpath>
+
+                <xpath expr="//field[@name='narration']" position="before">
+                    <field
+                        name="withholding_tax_line_ids"
+                        attrs="{'invisible': [('withholding_tax', '=', False)]}"
+                    >
                         <tree>
                             <field name="withholding_tax_id" />
                             <field name="base" />
@@ -60,7 +70,6 @@
                     </field>
                 </xpath>
 
--->
                 <xpath
                     expr="//group[hasclass('oe_subtotal_footer', 'oe_right')]/field[@name='amount_total']"
                     position="after"
@@ -132,9 +141,8 @@
                         name="invoice_line_tax_wt_ids"
                         widget="many2many_tags"
                         options="{'no_create': True}"
+                        invisible="context.get('move_type', 'out_invoice') not in ['in_invoice', 'in_refund']"
                     />
-
-                    <!-- attrs="{'invisible': context.get('move_type', 'out_invoice') not in ['in_invoice', 'in_refund']}" -->
                 </xpath>
 
             </field>
