--- a/l10n_it_fatturapa_out/views/attachment_view.xml
+++ b/l10n_it_fatturapa_out/views/attachment_view.xml
@@ -7,12 +7,12 @@
             <field name="model">fatturapa.attachment.out</field>
             <field name="arch" type="xml">
                 <tree string="Export Electronic Invoice" create="false">
-                    <field name="name" />
-                    <field name="invoice_partner_id" />
-                    <field name="out_invoice_ids" widget="many2many_tags" />
-                    <field name="state" />
-                    <field name="sending_date" />
-                    <field name="delivered_date" />
+                    <field name="name"/>
+                    <field name="invoice_partner_id"/>
+                    <field name="out_invoice_ids" widget="many2many_tags"/>
+                    <field name="state"/>
+                    <field name="sending_date"/>
+                    <field name="delivered_date"/>
                 </tree>
             </field>
         </record>
@@ -21,9 +21,9 @@
             <field name="model">fatturapa.attachment.out</field>
             <field name="arch" type="xml">
                 <search>
-                    <field name="name" />
-                    <field name="invoice_partner_id" />
-                    <field name="state" />
+                    <field name="name"/>
+                    <field name="invoice_partner_id"/>
+                    <field name="state"/>
                     <filter
                         name="ready"
                         string="Ready to Send"
@@ -53,74 +53,76 @@
             <field name="model">fatturapa.attachment.out</field>
             <field name="arch" type="xml">
                 <form string="Export Electronic Invoice" create="false">
-                    <header>
-                        <field name="state" widget="statusbar" />
-                    </header>
-                    <div>
-                        <group>
+                    <sheet>
+                        <header>
+                            <field name="state" widget="statusbar"/>
+                        </header>
+                        <div>
                             <group>
-                                <label for="datas" />
-                                <div>
-                                    <field
-                                        name="datas"
-                                        filename="name"
-                                        attrs="{'readonly': [('state', 'not in', ['ready', 'sender_error'])]}"
+                                <group>
+                                    <label for="datas"/>
+                                    <div>
+                                        <field
+                                            name="datas"
+                                            filename="name"
+                                            attrs="{'readonly': [('state', 'not in', ['ready', 'sender_error'])]}"
+                                        />
+                                        <field
+                                            name="ftpa_preview_link"
+                                            widget="url"
+                                            text="Show preview"
+                                        />
+                                    </div>
+                                    <field name="name"/>
+                                </group>
+                                <group>
+                                    <field name="has_pdf_invoice_print"/>
+                                    <field name="invoice_partner_id"/>
+                                </group>
+                            </group>
+                            <separator string="Invoices"/>
+                            <field
+                                name="out_invoice_ids"
+                                context="{'form_view_ref': 'account.view_move_form', 'tree_view_ref': 'account.view_move_tree'}"
+                            >
+                                <tree>
+                                    <field name="partner_id"/>
+                                    <field name="invoice_date"/>
+                                    <field name="name"/>
+                                    <field name="invoice_origin"/>
+                                    <field name="amount_total"/>
+                                    <field name="amount_residual"/>
+                                    <field name="state"/>
+                                    <button
+                                        name="open_form_current"
+                                        type="object"
+                                        string="Open full-screen"
+                                        icon="fa-external-link"
+                                        context="{'form_view_ref': 'account.view_move_form'}"
                                     />
+                                </tree>
+                            </field>
+                            <group string="History">
+                                <label for="create_uid" string="Created by"/>
+                                <div name="creation_div">
                                     <field
-                                        name="ftpa_preview_link"
-                                        widget="url"
-                                        text="Show preview"
+                                        name="create_uid"
+                                        readonly="1"
+                                        class="oe_inline"
+                                    /> on
+                                    <field
+                                        name="create_date"
+                                        readonly="1"
+                                        class="oe_inline"
                                     />
                                 </div>
-                                <field name="name" />
                             </group>
-                            <group>
-                                <field name="has_pdf_invoice_print" />
-                                <field name="invoice_partner_id" />
-                            </group>
-                        </group>
-                        <separator string="Invoices" />
-                        <field
-                            name="out_invoice_ids"
-                            context="{'form_view_ref': 'account.view_move_form', 'tree_view_ref': 'account.view_move_tree'}"
-                        >
-                            <tree>
-                                <field name="partner_id" />
-                                <field name="invoice_date" />
-                                <field name="name" />
-                                <field name="invoice_origin" />
-                                <field name="amount_total" />
-                                <field name="amount_residual" />
-                                <field name="state" />
-                                <button
-                                    name="open_form_current"
-                                    type="object"
-                                    string="Open full-screen"
-                                    icon="fa-external-link"
-                                    context="{'form_view_ref': 'account.view_move_form'}"
-                                />
-                            </tree>
-                        </field>
-                        <group string="History">
-                            <label for="create_uid" string="Created by" />
-                            <div name="creation_div">
-                                <field
-                                    name="create_uid"
-                                    readonly="1"
-                                    class="oe_inline"
-                                /> on
-                                <field
-                                    name="create_date"
-                                    readonly="1"
-                                    class="oe_inline"
-                                />
-                            </div>
-                        </group>
-                    </div>
-                    <div class="oe_chatter">
-                        <field name="message_follower_ids" widget="mail_followers" />
-                        <field name="message_ids" widget="mail_thread" />
-                    </div>
+                        </div>
+                        <div class="oe_chatter">
+                            <field name="message_follower_ids" widget="mail_followers"/>
+                            <field name="message_ids" widget="mail_thread"/>
+                        </div>
+                    </sheet>
                 </form>
             </field>
         </record>
@@ -130,10 +132,11 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">fatturapa.attachment.out</field>
             <field name="view_mode">tree,form</field>
-            <field name="view_id" ref="view_fatturapa_out_attachment_tree" />
+            <field name="view_id" ref="view_fatturapa_out_attachment_tree"/>
             <field
                 name="context"
-            >{'search_default_ready': True, 'search_default_sender_error': True, 'search_default_rejected': True, }</field>
+            >{'search_default_ready': True, 'search_default_sender_error': True,
+              'search_default_rejected': True, }</field>
         </record>
 
         <menuitem
